# snake

./: AppIcon.rc  CMakeLists.txt  README.md  snake.desktop
headers/: fruit.h  fruits.h  snake.h
release_packages/: Snake-1.0.0-Linux.deb
src/: fruit.cpp  fruits.cpp  main.cpp  snake.cpp
